fix the issue with the tiles on mobile
Hopefully this will fix the issue with the tiles on mobile

--- a/styles.css
+++ b/styles.css
@@ -169,6 +169,7 @@ section {
 }
 .project-tile > p {
   opacity: var(--description);
+  isolation: isolate;
   border-radius: 50px;
   position: relative;
   z-index: 2;
